# security-scanner

./: .gitignore  README.md  pyproject.toml  security_scanner.py  setup.py
.config/: Makefile
.github/workflows/: qualify_code.yml  wf.yml
app/: README.md
app/security_scanner/: __init__.py
app/security_scanner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/security_scanner/src/: security_scanner.py
app/security_scanner/test/: test_security_scanner.py
security_scanner/: README.md  __init__.py
security_scanner/src/: security_scanner.py
security_scanner/test/: test_security_scanner.py
test/: test_security_scanner.py
