[tool.poetry]
name = "security-scanner"
version = "0.1.4"
description = "Password/passphrase strength and health checker"
authors = ["Gustav Rasmussen TheNewThinkTank@users.noreply.github.com"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "security_scanner" },
]

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.8.0"

[tool.poetry.dev-dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
# sphinx = "^7.1.1"
# wily = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
