[tool.poetry]
name = "security-scanner"
version = "0.1.4"
description = "Password/passphrase strength and health checker"
authors = ["Gustav Rasmussen <TheNewThinkTank@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "security_scanner" },
]

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.8.0"
httpx = "^0.28.1"
# safety = "^3.2.14"
# pip-audit = "^2.7.3"

[tool.poetry.dev-dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
# sphinx = "^7.1.1"
# wily = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
